# Test

./: SAC.py  biandui.py.txt  nav.yaml  t1  编队.txt
DRL-robot-navigation-main-改/TD3/: train_velodyne_sac.py
DRL-robot-navigation-main-改/catkin_ws/src/multi_robot_scenario/: CMakeLists.txt  package.xml
DRL-robot-navigation-main-改/catkin_ws/src/multi_robot_scenario/launch/: TD3.world
DRL-robot-navigation-main-改/catkin_ws/src/multi_robot_scenario/plugins/: dynamic_obstacle_plugin.cpp
lasted/TD3/: 1.py  sac.py  velodyne_env.py
lasted/catkin_ws/src/: CMakeLists.txt
lasted/catkin_ws/src/multi_robot_scenario/launch/: TD3_world.launch  pioneer3dx.rviz
llm_navigation/: CMakeLists.txt  package.xml
llm_navigation/launch/: llm_navigation.launch
llm_navigation/rviz/: navigation.rviz
llm_navigation/scripts/: lidar_obstacle_detector.py  llm_path_planner.py  path_follower.py
new/: 1.py  Improve-mpc-sac.py  SAC.py  new-reward.txt  velodyne_env.py
sr/: MPC-SAC.csv  SAC.csv  TD3.csv
src/: config.py  formation_manager.py  improved_agent.py  improved_environment.py  main.py  memory_buffer.py  obstacle_manager.py  parallel_env.py  state_observer.py  trainer.py  utils.py
src/config/: default_config.yaml
src/results/20250604_142608/: config.yaml  results.json
src/results/20250604_165416/: config.yaml  results.json
